<resources>
    <string name="app_name">EventApp</string>
    <string name="users">Users</string>
    <string name="meetings">Meetings</string>
    <string name="help">Help</string>
    <string name="trips">Trips</string>
    <string name="settings">Settings</string>
    <string name="create_event">Create new Event</string>
    <string name="ok">OK</string>

    <!--Login-->
    <string name="login_into_a_group">Login into a group</string>
    <string name="name_of_a_group">Name of a group</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_a_group">Don\'t have a group? Create one</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="name_of_a_leader">Name of a leader</string>
    <string name="mail_of_a_leader">Mail of a leader</string>
    <string name="phone_of_a_leader">Phone of a leader</string>
    <string name="group_description">Group description</string>

    <!--Errors-->
    <string name="error_group_exist">Group already exits. Choose another name.</string>
    <string name="error_no_group">Group doesn\'t exits.</string>
    <string name="error_no_user">User has not been found.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_user">User has not been found.</string>
    <string name="error_phone_exist">Phone number already exits. Choose another phone number.</string>
    <string name="error_server">Communication with server failed.</string>
    <string name="error_group_name">Group name must have at least 5 characters.</string>
    <string name="error_phone">Phone number must have at least 10 digits.</string>
    <string name="error_empty_field">Field cannot be emtpy.</string>
    <string name="error_date">Not chosen date and time.</string>
    <string name="error_email">Email is not valid.</string>
    <string name="error_password">Password must have at least 5 characters.</string>


    <string name="join_the_event">Join the event</string>
    <string name="leave_the_event">Leave the event</string>

    <string name="event_line">%1$s (%2$s, %3$s)</string>
    <string name="select_event_type">Select event type</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="create">Create</string>
    <string name="event_details">Event details:</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="event_place">Event place</string>
    <string name="event_time">Event time</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="add_your_details">Add your details</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Continue</string>
    <string name="first_letter_of_name">ImageView containing first letter of name</string>
    <string name="edit_name_image">Edit name image</string>
    <string name="edit_image">Edit image</string>
    <string name="person_icon">Person image icon</string>
    <string name="mail_image">Mail image</string>
    <string name="phone_image">Phone image</string>


</resources>
