<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/users" />

    <item
        android:id="@+id/navigation_meetings"
        android:icon="@drawable/ic_local_bar"
        android:title="@string/meetings" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_build"
        android:title="@string/help" />

    <item
        android:id="@+id/navigation_trips"
        android:icon="@drawable/ic_landscape"
        android:title="@string/trips" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>
