<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_horizontal_padding"
        tools:context=".ui.main.MainActivity">

        <TextView
            android:id="@+id/tv_user_details"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:gravity="center"
            android:text="@string/add_your_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fullname"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/big_margin"
            android:hint="@string/fullname"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_details" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            style="@style/EditTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_fullname" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_phone_number"
            style="@style/EditTextStyle"
            android:hint="@string/phone_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/ActionButton"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>